@@ -1,2 +1,2 @@
-VERSION=8.00.03
+VERSION=8.00.04
 YEARS=1992-2015
