@@ -1,4 +1,4 @@
-.TH "icmbuild" "1" "1992\-2015" "icmake\&.8\&.00\&.03\&.tar\&.gz" "A generic program maintenance script"
+.TH "icmbuild" "1" "1992\-2015" "icmake\&.8\&.00\&.04\&.tar\&.gz" "A generic program maintenance script"
 
 .PP 
 .SH "NAME"
