@@ -1,3 +1,9 @@
+icmake (8.00.04)
+
+ * Fixed handling of line continuation backslashes (\$) in icm-pp
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 11 Dec 2015 22:01:51 +0100
+
 icmake (8.00.03)
 
  * Fixed an erroneously placed variable definition in icmbuild.in
